Добавил модули signup-ui и signup-domain и зависимости

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,5 @@ dependencyResolutionManagement {
 rootProject.name = "ApostasEsportivas"
 include ':app'
 include ':common'
+include ':signup-domain'
+include ':signup-ui'
