--- a/signup-ui/build.gradle
+++ b/signup-ui/build.gradle
@@ -1,23 +1,18 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    namespace 'com.andreykosarygin.apostasesportivas'
+    namespace 'com.andreykosarygin.signup_ui'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.andreykosarygin.apostasesportivas"
         minSdk 21
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -32,17 +27,6 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-    }
-    buildFeatures {
-        compose true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
-    }
-    packagingOptions {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
     }
 }
 
@@ -69,8 +53,6 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
 
-
     implementation project(path: ':common')
     implementation project(path: ':signup-domain')
-    implementation project(path: ':signup-ui')
 }
