Сделал утилиту для получения кодов и масок всех номеров в мире

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -56,6 +56,6 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
-
+    implementation "com.github.ibrahimsn98:PhoneNumberKit:$phoneNumberKitVersion"
 
 }
