--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         glideVersion = '4.15.0'
         navigationComposeVersion = '2.6.0'
         phoneNumberKitVersion = '2.0.6'
+        accompanistDrawablePainterVersion = '0.31.5-beta'
+
 
         //kotlin
         coreKtxVersion = '1.8.0'
@@ -18,6 +20,7 @@ buildscript {
         lifecycleRuntimeKtxVersion = '2.3.1'
         activityComposeVersion = '1.5.1'
         composeBomVersion = '2022.10.00'
+        constraintLayoutComposeVersion = '1.0.1'
 
         //tests
         junitVersion = '4.13.2'
