--- a/signup-ui/build.gradle
+++ b/signup-ui/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
 
+    implementation "androidx.constraintlayout:constraintlayout-compose:$constraintLayoutComposeVersion"
+
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$extJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoCoreVersion"
@@ -57,6 +59,8 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
     implementation "com.github.ibrahimsn98:PhoneNumberKit:$phoneNumberKitVersion"
+
+    implementation "com.google.accompanist:accompanist-drawablepainter:$accompanistDrawablePainterVersion"
 
 
     implementation project(path: ':common')
