--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
 
 
     implementation project(path: ':common')
+    implementation project(path: ':data')
     implementation project(path: ':signup-domain')
     implementation project(path: ':signup-ui')
 }
