--- a/data/build.gradle
+++ b/data/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    namespace 'com.andreykosarygin.common'
+    namespace 'com.andreykosarygin.data'
     compileSdk 33
 
     defaultConfig {
@@ -29,32 +29,21 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        compose true
-    }
 }
 
 dependencies {
     implementation "androidx.core:core-ktx:$coreKtxVersion"
     implementation platform("org.jetbrains.kotlin:kotlin-bom:$kotlinBomVersion")
-
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleRuntimeKtxVersion"
-    implementation "androidx.activity:activity-compose:$activityComposeVersion"
-
-    implementation platform("androidx.compose:compose-bom:$composeBomVersion")
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
-
-    implementation "androidx.constraintlayout:constraintlayout-compose:$constraintLayoutComposeVersion"
-
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$extJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoCoreVersion"
 
-    androidTestImplementation platform("androidx.compose:compose-bom:$testImplementationComposeBomVersion")
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    implementation "androidx.room:room-runtime:$roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+
+    implementation project(path: ':signup-domain')
+    implementation project(path: ':common')
+
+    implementation "com.github.ibrahimsn98:PhoneNumberKit:$phoneNumberKitVersion"
 }
