--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
 
     implementation "com.github.ibrahimsn98:PhoneNumberKit:$phoneNumberKitVersion"
 
+    implementation "androidx.navigation:navigation-compose:$navigationComposeVersion"
+
 
 
     implementation project(path: ':common')
