--- a/signup-ui/build.gradle
+++ b/signup-ui/build.gradle
@@ -62,6 +62,8 @@ dependencies {
 
     implementation "com.google.accompanist:accompanist-drawablepainter:$accompanistDrawablePainterVersion"
 
+    implementation "androidx.navigation:navigation-compose:$navigationComposeVersion"
+
 
     implementation project(path: ':common')
     implementation project(path: ':signup-domain')
