--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,5 @@ include ':common'
 include ':signup-domain'
 include ':signup-ui'
 include ':data'
+include ':companies-ui'
+include ':companies-domain'
