--- a/companies-ui/build.gradle
+++ b/companies-ui/build.gradle
@@ -1,24 +1,19 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
 }
 
 android {
-    namespace 'com.andreykosarygin.apostasesportivas'
+    namespace 'com.andreykosarygin.companies_ui'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.andreykosarygin.apostasesportivas"
         minSdk 21
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -37,17 +32,10 @@ android {
     buildFeatures {
         compose true
     }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
-    }
-    packagingOptions {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
-    }
 }
 
 dependencies {
+
     implementation "androidx.core:core-ktx:$coreKtxVersion"
     implementation platform("org.jetbrains.kotlin:kotlin-bom:$kotlinBomVersion")
 
@@ -73,14 +61,11 @@ dependencies {
 
     implementation "com.github.ibrahimsn98:PhoneNumberKit:$phoneNumberKitVersion"
 
+    implementation "com.google.accompanist:accompanist-drawablepainter:$accompanistDrawablePainterVersion"
+
     implementation "androidx.navigation:navigation-compose:$navigationComposeVersion"
 
 
-
     implementation project(path: ':common')
-    implementation project(path: ':data')
-    implementation project(path: ':signup-domain')
-    implementation project(path: ':signup-ui')
     implementation project(path: ':companies-domain')
-    implementation project(path: ':companies-ui')
 }
